# TextBased

./: CMakeLists.txt  JOURNAL.md  README.md  TODO.md  test.cpp
CMAKE/: FindSDL2Mixer.cmake
resources/: SDL_FontCache.c  SDL_FontCache.h  emma.txt
src/: Constants.h  Game.cpp  Game.h  Globals.h  Main.cpp  Renderer.cpp  Renderer.h  SDL_FontCache.c  Window.cpp  Window.h
src/ECS/Components/: BoxComponent.h  ColliderComponent.h  MovementComponent.h  PositionComponent.h  ShowComponent.h  SpriteComponent.h  StyleComponent.h  TextComponent.h  TransformComponent.h
src/ECS/Design/: Component.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  Group.h  Pool.h  Registry.h  System.cpp  System.h
src/ECS/Systems/: CollisionSystem.cpp  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  UpdateSystem.h
src/Game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h  TextGenerator.cpp  TextGenerator.h
src/Game/GameObjects/: GameObject.cpp  GameObject.h  Mountain.cpp  Mountain.h  TextPerson.cpp  TextPerson.h  Tree.cpp  Tree.h
src/GameSystems/InputProcessor/: InputProcessor.h
src/GameSystems/Renderer/: Renderer.cpp  Renderer.h
src/GameSystems/Window/: Window.cpp  Window.h
src/InputProcessor/: InputProcessor.cpp  InputProcessor.h
src/Objects/: Position.h  Size.h  Velocity.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Window/: Window.cpp  Window.h
src/main/: Globals.h  Main.cpp  Sandbox.cpp
src/main/Abyz/: AbyzComponent.h  AbyzControlSystem.cpp  AbyzControlSystem.h  AbyzPlatformCollisionHandleSystem.cpp  AbyzPlatformCollisionHandleSystem.h  AbyzPrefab.h  AbyzPrioritizingSystem.cpp  AbyzPrioritizingSystem.h  AbyzRenderingSystem.cpp  AbyzRenderingSystem.h  AbyzRunningSystem.cpp  AbyzRunningSystem.h  AbyzTargetAllocationSystem.cpp  AbyzTargetAllocationSystem.h  AbyzTargetComponent.h  AbyzTargetExecutionSystem.cpp  AbyzTargetExecutionSystem.h  AbyzTargetingComponent.h  AbyzTargetingSystem.h  JourneyComponent.h  LifeGateComponent.h  LifeGateSystem.cpp  LifeGateSystem.h  PlainAbyzPrefab.h  PriorityTargetComponent.h  TargetForAbyzComponent.h  WordRelicPrioritizingSystem.cpp  WordRelicPrioritizingSystem.h
src/main/Attacking/: ActiveWeaponComponent.h  AttackAttemptSystem.cpp  AttackAttemptSystem.h  AttackExecuteSystem.cpp  AttackExecuteSystem.h  AttackType.h  AttackableComponent.h  AttemptedAttackEvent.h  SuccessfulAttackEvent.h
src/main/Camera/: Camera.cpp  Camera.h  CameraFollowSystem.cpp  CameraFollowSystem.h
src/main/Creation/: CreateItemAtEntityEvent.h  CreateItemAtPositionEvent.h  CreateItemEvent.h  CreateLetterAtPositionEvent.h  CreatePlayerItemEvent.h  Item.h  ItemComponent.h  ItemCreationSystem.cpp  ItemCreationSystem.h  StashPlayerItemEvent.h
src/main/Diegesis/: CoinBoxCollisionSystem.cpp  CoinBoxCollisionSystem.h  EngineerDialogueSystem.cpp  EngineerDialogueSystem.h  EngineerSpeakEvent.h  EngineerTerminalEvent.h
src/main/ECSManagers/: ComponentManager.h  EntityManager.cpp  EntityManager.h  SystemManager.h
src/main/ECSObjects/: Component.h  ComponentSignature.h  EventConsumerSystem.h  FinalSystem.h  FirstSystem.h  Pool.h  System.cpp  System.h  UpdateSystem.h
src/main/Emma/: CoinBoxComponent.h  EmmaStart.cpp  EmmaStart.h  EmmaWoodhouseComponent.h  EmmaWoodhouseSystem.cpp  EmmaWoodhouseSystem.h  ReadEmma.cpp
src/main/EventSystem/: Event.h  EventBus.cpp  EventBus.h  EventFunctionWrapper.h
src/main/Game/: Game.cpp  Game.h  GameManager.cpp  GameManager.h  Level1.cpp  Level1.h  TextGenerator.cpp  TextGenerator.h
src/main/Grammar/: GrammarEvent.h  GrammarSystem.cpp  GrammarSystem.h
src/main/Gravity/: GravityComponent.h  GravitySystem.cpp  GravitySystem.h  JumpingComponent.h  JumpingSystem.cpp  JumpingSystem.h  VelocityComponent.h
src/main/Health/: HealthBarRenderSystem.cpp  HealthBarRenderSystem.h  HealthComponent.h  HealthSystem.cpp  HealthSystem.h  OnDeathComponent.h  PendingDeathComponent.h  PendingDeathSystem.cpp  PendingDeathSystem.h
src/main/HighLevel/: ECSManager.cpp  ECSManager.h  FontGlobals.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Globals.h  SystemAddSystem.cpp  SystemAddSystem.h  TerminalGlobals.h
src/main/Inventory/: Inventory.h  InventoryComponent.h  InventoryPickupComponent.h  InventoryRenderSystem.cpp  InventoryRenderSystem.h  InventorySystem.cpp  InventorySystem.h  PickupEvent.h  PickupSystem.cpp  PickupSystem.h  PlaceEvent.h  PlaceSystem.cpp  PlaceSystem.h  PlayerPickUpEvent.h  PlayerPickUpSystem.cpp  PlayerPickUpSystem.h  StashPlayerItemEvent.h
src/main/LetterMaze/: LetterMazePrefab.h  LetterStreamPrefab.h  VerticalLetterMazePrefab.h  VerticalLetterStreamPrefab.h
src/main/Lettering/: Alphabet.h  Character.h  CharacterDepositEvent.h  CharacterStorageSystem.cpp  CharacterStorageSystem.h  FreeWordEvent.h  FreeWordSystem.cpp  FreeWordSystem.h  Letter.h  LetterBankRenderSystem.cpp  LetterBankRenderSystem.h  LetterComponent.h  LetterPickupSystem.cpp  LetterPickupSystem.h  LetterPrefab.h  LetterStorageSystem.cpp  LetterStorageSystem.h  WordDepositEvent.h
src/main/Levels/: AxeComponent.h  BasicLevel.cpp  BasicLevel.h  ChopEvent.h  ChoppingSystem.cpp  ChoppingSystem.h  FirstLevel.cpp  FirstLevel.h  ForestGenerator.cpp  ForestGenerator.h  FullBasicLevel.cpp  FullBasicLevel.h  IntroPac.cpp  IntroPac.h
src/main/MainPlayer/: DamageEvent.h  DamageSystem.cpp  DamageSystem.h  KeyboardMovementComponent.h  MainPlayerAccessSystem.cpp  MainPlayerAccessSystem.h  MainPlayerComponent.h  MovementHandleSystem.cpp  MovementHandleSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerKeyboardInputSystem.cpp  PlayerKeyboardInputSystem.h  PlayerRotateSystem.cpp  PlayerRotateSystem.h  RotateComponent.h  RotateEvent.h  TiedChildComponent.h  UnprocessedKeyboardMovementSystem.cpp  UnprocessedKeyboardMovementSystem.h  UnprocessedMovement.h  UnprocessedMovementSystem.cpp  (+1 more)
src/test/: entityTest.cpp
src/tests/: ECSManagerDeclaration.cpp  ECSManagerDeclaration.h  ECSTest.cpp  ECSTest.h  MockScopeGuard.h  MovementSystemTest.cpp  RandomTest.cpp  TestExternDeclarations.cpp  TestExternDeclarations.h  entityTest.cpp
(+360 files in other folders)
